# tip-term

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
document/: terminal-core-refactor-status.md
src/: .gitignore  App.tsx  index.html  main.tsx  package.json  pnpm-lock.yaml  styles.css  tailwind.config.js  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  filesystem.rs  git.rs  main.rs
src-tauri/src/terminal/: history.rs  mod.rs  vte_parser.rs
src/components/: XTerminal.tsx
src/components/editor/: CodeEditor.tsx  EditorHeader.tsx  EditorPanel.tsx  EditorStatusBar.tsx  EditorTabs.tsx
src/components/filetree/: FileTreeContextMenu.tsx  (+5 more)
src/config/: defaultColorSchemes.ts  defaultHotkeys.ts
src/hooks/: useHotkeyHandler.ts  useProcessPolling.ts
src/services/: themeService.ts
src/src/: App.tsx  styles.css
src/src-tauri/: Cargo.toml  tauri.conf.json
src/src-tauri/capabilities/: default.json
src/src-tauri/src/: filesystem.rs  git.rs  lib.rs  main.rs
src/src-tauri/src/terminal/: mod.rs  vte_parser.rs
src/stores/: editorStore.ts  fileTreeStore.ts  gitStore.ts  quickOpenStore.ts  sessionStore.ts  settingsStore.ts  sidebarStore.ts  splitPaneStore.ts  terminalConfigStore.ts  terminalSearchStore.ts  terminalSuggestStore.ts
src/terminal-core/: terminalRegistry.ts
src/types/: file.ts  git.ts  theme.ts
src/utils/: diffAdapter.ts  fileTreeUtils.ts  hotkeyUtils.ts  terminalRegistry.ts
(+130 files in other folders)
