[package]
name = "tip-term"
version = "0.1.0"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Terminal emulation - use vte parser directly (more stable than alacritty_terminal)
vte = "0.15"

# PTY handling
portable-pty = "0.8"

# UUID for session IDs
uuid = { version = "1.11", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
