[package]
name = "tip-term"
version = "0.1.0"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# PTY handling
portable-pty = "0.8"

# UUID for session IDs
uuid = { version = "1.11", features = ["v4"] }

# Process information
sysinfo = "0.32"
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
